fixed course tile not showing above schedule

--- a/src/components/palette.module.css
+++ b/src/components/palette.module.css
@@ -2,7 +2,6 @@
 }
 
 .scrollContainer {
-  position: relative;
   overflow-y: scroll;
   max-height: 570px;
 }
